--- a/src/stylesheets/Resolution.css
+++ b/src/stylesheets/Resolution.css
@@ -15,4 +15,30 @@ pre {
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
-   }
+}
+
+h4{
+    background-color: #a70eff;
+    border-radius: 5pt;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    padding: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: #eeee;
+}
+
+.info, .info-center{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+    width: 50%;
+    color:#202020;
+    margin-bottom: 10px;
+}
+
+.info-center{
+    text-align: center;
+}
