--- a/src/stylesheets/ResolutionAnimatedDemo.css
+++ b/src/stylesheets/ResolutionAnimatedDemo.css
@@ -1,3 +1,22 @@
 h1{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+
+.titleInfo{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+    width: 50%;
+    color:#202020;
+    margin-bottom: 10px;
+}
+
+.hint{
+    background-color: rgb(187, 226, 244);
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+    padding: 10pt;
+    border-radius: 8px;
+    font-size: small;
+}
